--- a/uniexchange/package.json
+++ b/uniexchange/package.json
@@ -12,6 +12,10 @@
     "@clerk/nextjs": "^5.7.5",
     "@elastic/elasticsearch": "^8.15.1",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-scroll-area": "^1.2.0",
+    "@radix-ui/react-select": "^2.1.2",
+    "@radix-ui/react-slot": "^1.1.0",
     "@uploadthing/react": "^7.0.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
